# daksha-rc-core

./: .dockerignore  .env  .gitignore  .release-please-manifest.json  .releaserc.json  Cargo.toml  Dockerfile.chef  LICENSE  Makefile.toml  README.md  Shuttle.toml  devbox.json  logos.md  package.json  release-please-config.json  release-please-manifest.json  test.rs
.githooks/: pre-commit
Writerside/: dr.tree  labels.list  writerside.cfg
definitions-cli/: Cargo.toml
definitions-cli/src/: main.rs
definitions-cli/tests/resources/: institute.json  student.json
definitions-core/: Cargo.toml  SimpleCommands.md  designnotes.md
definitions-core/.sqlx/: query-45e83ebf33abca00e431d9a99c4e67955727688f377196b28d5ffca9b3df1794.json
definitions-core/src/: banking_domain.rs  definitions_domain.rs  lib.rs  read_side_processor.rs  registry_domain.rs  schema_def.rs  schema_def_events.rs  schema_def_services.rs
definitions-core/tests/: birth_certificate_use_cases.rs  definitions_domain_tests.rs  read_side_processors_tests.rs  registry_domain_tests.rs  schema_def_aggregate_tests.rs  schema_def_test.rs
definitions-core/tests/common/: mod.rs  test_harness.rs
definitions-core/tests/resources/: registry.feature
definitions-core/tests/resources/records/: student1.json
definitions-core/tests/resources/schemas/: BirthCertificate_Schema.json  Institute.json  Institute_Schema.json  Student_Schema.json  Teacher_Schema.json  teacher.json
definitions-infra-postgres/: Cargo.toml
definitions-infra-postgres/.sqlx/: query-dcec4a89af8a706b6b7ba016bb1a133b9d9338765c843b354e266270fca970ab.json  query-fab2533c3c25a64a10e7c0e2ebff8b2667ffc43f06dbfde68f15ffcc2f35ce35.json
definitions-infra-postgres/src/: lib.rs  repository_postgres_impl.rs
definitions-infra-sqlite/: Cargo.toml
definitions-infra-sqlite/.sqlx/: query-45e83ebf33abca00e431d9a99c4e67955727688f377196b28d5ffca9b3df1794.json  query-69be8b77647c5afd8073a7a8179b71edd15a97f6e8592758e31f9912b08c9356.json  query-dcec4a89af8a706b6b7ba016bb1a133b9d9338765c843b354e266270fca970ab.json  query-ec0d0382bc86feb9f4fc7bfa75e08706fcbf789ff96bdd7259e591db776d91d9.json  query-f75adf40cf50429fda1f274ab9bb7dd849e3f954e2d9ed862dfb98459784e712.json
definitions-infra-sqlite/src/: lib.rs  repository_sqlite_impl.rs
definitions-infra-sqlite/tests/: repository_sqlite_test.rs
definitions-manager-json/: Cargo.toml
definitions-manager-lib/: Cargo.toml  SimpleCommands.md  designnotes.md
definitions-manager-lib/.sqlx/: query-69be8b77647c5afd8073a7a8179b71edd15a97f6e8592758e31f9912b08c9356.json
definitions-manager-lib/src/: definitions_manager.rs  lib.rs  read_side_processor.rs  schema_def.rs  schema_def_aggregate.rs  schema_def_commands.rs  schema_def_events.rs  schema_def_queries.rs  schema_def_services.rs
definitions-manager-lib/src/infrastructure/: repository_impl.rs
definitions-manager-lib/tests/: read_side_processors_tests.rs  schema_def_aggregate_tests.rs  schema_def_test.rs  simple_example.rs
definitions-manager-lib/tests/resources/records/: student1.json
definitions-manager-lib/tests/resources/schemas/: Institute.json  not_a_json.json  not_a_schema.json  student.json  teacher.json
definitions-manager-toml/: Cargo.toml
definitions-manager-traits/: Cargo.toml
docs/: TAG_PARAMETER_FEATURE.md  build-basic-docker.yml  build-basic-simple.yml  build-rc-web-image.yml  command-commands.md  common-commands.md  lb-config.json  multi-platform-builds.md  release-basic-image.yml
k8s/: httpbin-IngressRoute.yaml  httpbin.yaml  pgadminvalues.yaml
migrations/: 20240911075431_init.down.sql  20240911075431_init.up.sql  20241129043445_table_event.down.sql  20241129043445_table_event.up.sql  20241129043459_table_event_sequence.down.sql  20241129043459_table_event_sequence.up.sql  20241129043830_idx_event_sequence_committed.down.sql  20241129043830_idx_event_sequence_committed.up.sql  20241129043953_idx_event_sequence_type.up.sql  20241129044012_idx_event_type.down.sql  20241129044012_idx_event_type.up.sql
projections-lib/: Cargo.toml
projections-lib/src/: in_mem_offset_store.rs  lib.rs  offset_store.rs
rc-web/: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.simple  README.md  docker-compose.prebuilt.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml
rc-web/.sqlx/: query-f75adf40cf50429fda1f274ab9bb7dd849e3f954e2d9ed862dfb98459784e712.json
rc-web/basic-image/: Dockerfile.basic
rc-web/config/: Default.toml  Development.toml  Production.toml  Testing.toml
rc-web/db/: pgadminservers.json  pgpassfile
rc-web/db/docker-entrypoint-initdb.d/: create_database.sql
rc-web/migrations/: 20240911075431_init.down.sql  20240911075431_init.up.sql
rc-web/src/: app.rs  command_extractor.rs  config.rs  lib.rs  main.rs  test.rs
rc-web/src/db/: connection.rs  mod.rs
rc-web/src/handlers/: mod.rs  schema_def_handlers.rs
rc-web/src/middleware/: claims.rs  cors.rs  mod.rs  security_headers.rs
rc-web/src/models/: mod.rs
rc-web/src/projections/: definitions_read_model.rs  mod.rs  schema_projection.rs
rc-web/src/routes/: api_routes.rs  definition_routes.rs  entity_routes.rs  health_check.rs  mod.rs
rc-web/static/: index.html
rc-web/tests/: client_schema_test.rs  health_check_test.rs  json_schema_flatten_test.rs  mod.rs  simple.puml  web-tests.rs
rc-web/tests/api-tests/: Insurance_schema.json  Student1_Schema.json  Student2_Schema.json  Student3_Schema.json  Student4_Schema.json  Student5_Schema.json  Student_Schema_ref_fixed.json  Teacher_Schema.json  api_tests.http  authentication_tests.http  client_john.json  client_schema.json  consultant_sarah.json  consultant_schema.json  database_reset.sql  student_john.json  teacher_smith.json
rc-web/tests/common/: mod.rs  read_side_processor_web.rs
rc-web/tests/integration_tests/: mod.rs  read_model_projection_test.rs  simple_contaner_based_test.rs  test_with_redis.rs
scripts/: README.md  build-amd64-with-fixes.sh  build-base-image.sh  build-basic-image-all.sh  build-basic-image-amd64.sh  build-basic-image-arm64.sh  build-examples.sh  build-image-all.sh  (+30 more)
(+52 files in other folders)
