[workspace]
members = [
    "definitions-manager-lib",
    "definitions-manager-json",
    "definitions-manager-toml",
    "definitions-cli",
    "rc-web",
    "definitions-infra-postgres",
    "definitions-infra-sqlite",
    "projections-lib"
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80.1"
version = "0.1.0-SNAPSHOT"
license = "MIT"

[profile.dev]
split-debuginfo = "unpacked"
[workspace.dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.9.0"
anyhow = "1.0.91"
async-stream = "0.3.6"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.1"
cqrs-es = "0.4.12"
ctor = "0.2.8"
demonstrate = { version = "0.4.5"}
dotenvy = "0.15.7"
env_logger = "0.11.5"
features = "0.10.0"
futures = "0.3.31"
futures-util = "0.3.31"
hamcrest2 = "0.3.0"
jsonschema = "0.23.0"
log = "0.4.22"
lru = "0.12.5"
mockall = "0.13.0"
mqtt-protocol = "0.12.0"
once_cell = "1.20.2"
postgres-es = "0.4.12"
regex = "1.11.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
smol_str = { version = "0.3.2", features = ["serde"] }
sqlite-es = "0.4.12"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono", "postgres" ,"json","sqlite","runtime-tokio-native-tls","migrate"] }
streambed = "0.11.1"
streambed-confidant = { version = "0.11.1" }
streambed-logged = { version = "0.11.1" }
test-log = "0.2.16"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream= "0.1.16"
toml = "0.8.19"
url = "2.5.2"
utoipa = "5.1.2"
utoipa-rapidoc =  { version = "5.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.2.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
uuid = { version = "1.11.0", features = ["v7"] }
validator = { version = "0.18.1", features = ["derive"] }
