[workspace]
members = [
    "definitions-cli",
    "rc-web",
    "projections-lib",
    "definitions-core"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0-SNAPSHOT"
license = "MIT"

[profile.dev]
split-debuginfo = "unpacked"

[workspace.dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = { version = "4.11.0", features = ["rustls"] }
actix-web-httpauth = "0.8.2"
anyhow = "1.0.98"
async-stream = "0.3.6"
async-trait = "0.1.88"
blake3 = "1.8.2"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
ctor = "0.4.2"
derive_more = { version = "2.0", features = ["full"] }
disintegrate = { version = "2.0.0", features = ["macros", "serde-json"] }
disintegrate-postgres = { version = "2.0.1", features = ["listener"] }
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
hamcrest2 = "0.3.0"
jsonschema = "0.30.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
lru = "0.14.0"
mockall = "0.13.1"
mqtt-protocol = "0.12.0"
once_cell = "1.21.3"
postgres = "0.19.10"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smol_str = { version = "0.3.2", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres", "json", "runtime-tokio-native-tls", "migrate"] }
streambed = "0.13.0"
streambed-confidant = { version = "0.13.0" }
streambed-logged = { version = "0.13.0" }
strum = "0.27.1"
strum_macros = "0.27.1"
test-log = "0.2.17"
testcontainers = { version = "0.24.0" }
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = "0.7.13"
tokio-stream = "0.1.17"
toml = "0.8.23"
unicode-normalization = "0.1.24"
utoipa = { version = "5.3.1", features = ["chrono", "uuid", "actix_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "vendored"] }
uuid = { version = "1.17.0", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }