[package]
name = "definitions-cli"
edition = "2021"
rust-version = "1.80.1"
version = "0.1.0-SNAPSHOT"
license = "MIT"
[dependencies]
jsonschema = "0.23.0"
serde = { version = "1.0.209", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.127"
toml = "0.8.19"
definitions-manager-lib = { path = "../definitions-manager-lib" }
