[package]
name = "definitions-core"
edition = "2021"
rust-version = "1.80.1"
version = "0.1.0-SNAPSHOT"
license = "MIT"
[dependencies]
anyhow = { workspace = true }
chrono =  { workspace = true }
disintegrate = { workspace = true }
jsonschema = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror =  { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
hamcrest2 ={ workspace = true }
mockall ={ workspace = true }
[package.metadata.sqlx]
query = true
