[package]
name = "definitions-core"
edition = "2021"
rust-version = "1.80.1"
version = "0.1.0-SNAPSHOT"
license = "MIT"
[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
disintegrate = { workspace = true }
env_logger = { workspace = true }
jsonschema = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }
uuid = { workspace = true }
[dev-dependencies]
mockall = { workspace = true }
ctor = { workspace = true }
[package.metadata.sqlx]
query = true

