[package]
name = "definitions-infra-sqlite"
edition = "2021"
rust-version = "1.80.1"
version = "0.1.0-SNAPSHOT"
license = "MIT"
[dependencies]
anyhow = { workspace = true }
async-trait ={ workspace = true }
chrono = { workspace = true }
definitions-manager-lib = { path = "../definitions-manager-lib" }
serde = { workspace = true }
sqlx = { workspace = true }
tokio =  { workspace = true }