[package]
name = "definitions-manager-lib"
edition = "2021"
rust-version = "1.80.1"
version = "0.1.0-SNAPSHOT"
license = "MIT"
[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.127"
jsonschema = "0.20.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }
demonstrate = { version = "0.4.5"}
validator = { version = "0.18.1", features = ["derive"] }
cqrs-es = "0.4.11"
async-trait = "0.1.82"
anyhow = "1.0.86"
url = "2.5.2"
reqwest = { version = "0.12.7", features = ["json"] }
sqlx = { version = "0.8.2", features = [ "chrono", "postgres" ,"json","sqlite"] }
regex = "1.10.6"
thiserror = "1.0.63"
once_cell = "1.19.0"
uuid = { version = "1.10", features = ["v7"] }
actix = "0.13.5"
shaku = "0.6.2"
mockall = "0.13.0"
log = "0.4.22"
[dev-dependencies]
hamcrest2 = "0.3.0"

