[package]
name = "definitions-manager-lib"
edition = "2021"
rust-version = "1.80.1"
version = "0.1.0-SNAPSHOT"
license = "MIT"
[dependencies]
actix = "0.13.5"
anyhow = "1.0.86"
async-trait = "0.1.82"
chrono = { version = "0.4.38", features = ["serde"] }
cqrs-es = "0.4.11"
demonstrate = { version = "0.4.5"}
jsonschema = "0.23.0"
log = "0.4.22"
mockall = "0.13.0"
once_cell = "1.19.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono", "postgres" ,"json","sqlite"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }
url = "2.5.2"
uuid = { version = "1.10", features = ["v7"] }
validator = { version = "0.18.1", features = ["derive"] }
[dev-dependencies]
hamcrest2 = "0.3.0"
[package.metadata.sqlx]
query = true
