[package]
name = "definitions-manager-lib"
edition = "2021"
rust-version = "1.80.1"
version = "0.1.0-SNAPSHOT"
license = "MIT"
[dependencies]
actix = { workspace = true }
anyhow = { workspace = true }
async-trait =  { workspace = true }
chrono =  { workspace = true }
cqrs-es = { workspace = true }
demonstrate ={ workspace = true }
jsonschema = { workspace = true }
log = { workspace = true }
mockall ={ workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror =  { workspace = true }
tokio = { workspace = true }
url ={ workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
hamcrest2 ={ workspace = true }
[package.metadata.sqlx]
query = true
