[package]
name = "rc-web"
edition = "2021"
rust-version = "1.80.1"
version = "0.1.0-SNAPSHOT"
license = "MIT"
[dependencies]
actix = { workspace = true }
actix-rt ={ workspace = true }
actix-web = { workspace = true }
anyhow =  { workspace = true }
async-trait = { workspace = true }
chrono =  { workspace = true }
config = { workspace = true }
cqrs-es ={ workspace = true }
ctor ={ workspace = true }
definitions-infra-postgres = { path = "../definitions-infra-postgres" }
definitions-infra-sqlite = { path = "../definitions-infra-sqlite" }
definitions-manager-lib = { path = "../definitions-manager-lib" }
dotenvy = { workspace = true }
env_logger =  { workspace = true }
features = { workspace = true }
futures =  { workspace = true }
log =  { workspace = true }
postgres-es = { workspace = true }
serde =  { workspace = true }
serde_json = { workspace = true }
sqlite-es = { workspace = true }
sqlx =  { workspace = true }
thiserror =  { workspace = true }
tokio =  { workspace = true }
utoipa =  { workspace = true }
utoipa-rapidoc =  { workspace = true }
utoipa-redoc =  { workspace = true }
utoipa-scalar =  { workspace = true }
utoipa-swagger-ui =  { workspace = true }
uuid =  { workspace = true }
validator =  { workspace = true }
[dev-dependencies]
hamcrest2 = { workspace = true }
mockall = { workspace = true }



