[package]
name = "rc-web"
edition = "2021"
rust-version = "1.80.1"
version = "0.4.0"
license = "MIT"
[dependencies]
actix = { workspace = true }
actix-cors = { workspace = true }
actix-files = { workspace = true }
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
cached = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
ctor = { workspace = true }
definitions-core = { path = "../definitions-core" }
derive_more = { workspace = true }
disintegrate = { workspace = true }
disintegrate-postgres = { workspace = true }
env_logger = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
postgres = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
hamcrest2 = { workspace = true }
mockall = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio-postgres = { workspace = true }


[features]
default = ["std"] # Example, can be empty
std = []
integration_tests = []